[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pddl-tool"
version = "0.1.0"
description = "Natural language → PDDL → plan → plain English explanation"
authors = [{name = "Sathvik"}]
requires-python = ">=3.10"
dependencies = [
    "groq>=0.9",
    "click>=8.0",
]

[project.scripts]
pddl-tool = "pddl_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pddl_tool*"]
